Bug 582012 - register identifiers in the ID maps when they are created by the browser, so that a plugin never sees two identifiers for the same string/integer, r=bent